# fertility-forecaster

./: .dockerignore  .gitignore  CNAME  Dockerfile  LICENSE  README.md  index.html  more-info.html
backend/: README.md  methodology.md  pyproject.toml  requirements.txt
backend/scripts/: analyze_sterility_overlap.py  benchmark_habbema.py  reverse_engineer_habbema.py  sterility_overlap_evaluation.md  test_concentrations.py  verify_docs_vs_code.py  western_fecundability_studies.md
backend/src/fertility_forecaster/: api.py  bayesian.py  curves.py  models.py  schemas.py  simulation.py
backend/tests/: conftest.py  test_api.py  test_bayesian.py  test_curves.py  test_simulation.py  test_validation.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/public/: methodology.html
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Footer.tsx
frontend/src/components/form/: AdvancedParams.tsx  BmiCalculator.tsx  CollapsibleSection.tsx  FrozenBatchRow.tsx  FrozenStorage.tsx  HealthLifestyle.tsx  InputForm.tsx  styles.ts
frontend/src/components/results/: CompletionChart.tsx  DetailedInsights.tsx  HeroInsight.tsx  ResultsPanel.tsx  WhatIfFreezeCard.tsx
frontend/src/constants/: defaults.ts  fertility.ts
frontend/src/hooks/: useBmiCalculator.ts  useSweep.ts
frontend/src/utils/: insights.ts
