[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fertility-forecaster"
version = "0.1.0"
description = "Monte Carlo fertility simulation engine"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fertility_forecaster"]

[tool.pytest.ini_options]
testpaths = ["tests"]
